aligned buttons at bottom and fixed readMe

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@
  * -- BASE STYLES --
  * Most of these are inherited from Base, but I want to change a few.
  */
- .body {
+.body {
   color: #526066;
   background-color: rgba(0, 0, 0, 0.02);
 }
@@ -18,14 +18,14 @@ p {
   line-height: 1.6em;
 }
 
-@keyframes change{
-  0%{
+@keyframes change {
+  0% {
     background-position: 0 50%;
   }
-  50%{
+  50% {
     background-position: 100% 50%;
   }
-  100%{
+  100% {
     background-position: 0 50%;
   }
 }
@@ -56,7 +56,7 @@ p {
   display: flex;
 }
 
-.card:hover{
+.card:hover {
   transform: scale(1.02);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.09);
 }
@@ -78,8 +78,8 @@ p {
   margin: 1rem;
   border-radius: 25px;
 }
-.btn.btn-link:hover{
-  transform:scale(1.06);
+.btn.btn-link:hover {
+  transform: scale(1.06);
   box-shadow: 0 0 5px #2e2e2e, 0 0 10px #2e2e2e, 0 0 15px #2e2e2e;
 }
 
@@ -95,9 +95,9 @@ p {
   margin: 1rem;
   border-radius: 25px;
 }
-.history-btn:hover{
+.history-btn:hover {
   transform: scale(1.06);
-  cursor:pointer;
+  cursor: pointer;
   box-shadow: 0 0 5px #08fe00, 0 0 10px #08fe00, 0 0 15px #08fe00;
 }
 
@@ -105,7 +105,7 @@ p {
   margin-bottom: 0;
 }
 
-#heading.card-header{
+#heading.card-header {
   animation: change 10s ease-in-out infinite;
   position: relative;
   width: 100%;
@@ -113,28 +113,28 @@ p {
   background-size: 100% 100%;
   list-style: none;
 }
-.card-body{
+.card-body {
   list-style: none;
 }
-.card-body li{
+.card-body li {
   width: 450px;
   margin: 100px auto 0;
-  padding:10px;
+  padding: 10px;
   text-align: left;
   display: flex;
   margin: 5px 0;
-  transition: .5s;
+  transition: 0.5s;
   background: rgba(0, 0, 0, 0.02);
   box-sizing: border-box;
   list-style-type: none;
   letter-spacing: 2.5px;
 }
-.card-body li:before{
+.card-body li:before {
   content: "\1F4B0";
 }
 
-.card-body li:hover{
-  transform:scale(1.06);
+.card-body li:hover {
+  transform: scale(1.06);
   list-style: none;
 }
 /*
@@ -143,12 +143,12 @@ p {
  */
 .pure-menu {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  background-color:#2e2e2e;
+  background-color: #2e2e2e;
 }
 
 .pure-menu-link {
   padding: 0.5em 0.7em;
-  color:#0da008;
+  color: #0da008;
   font-style: italic;
   font-size: larger;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -216,7 +216,7 @@ p {
  */
 
 .stock-table-free .stock-table-header {
-  background: linear-gradient(-45deg,#08fe00,#2e2e2e );
+  background: linear-gradient(-45deg, #08fe00, #2e2e2e);
   animation: change 10s ease-in-out infinite;
   position: relative;
   width: 100%;
@@ -303,15 +303,24 @@ p {
   font-weight: 500;
 }
 
-.footer{
+.centerClearButton {
+  position: absolute;
+  right: 47.25%;
+}
+
+.time {
+  text-align: center;
+}
+
+.footer {
   background: white;
   text-align: center;
   padding: 10px solid;
 }
- #displayedTime{
-   padding: 10px;
-   border-radius: 10px;
- }
+#displayedTime {
+  padding: 10px;
+  border-radius: 10px;
+}
 /*
  * -- TABLET MEDIA QUERIES --
  * On tablets, we want to slightly adjust the size of the banner
@@ -377,18 +386,17 @@ main:after {
 button#search-button {
   color: #4fa2e8;
 }
-.fa-search a::after{
+.fa-search a::after {
   color: #4fa2e8;
 }
 
-button#removeButton.btn.btn-link{
-
-  background-color:#08fe00 ;
+button#removeButton.btn.btn-link {
+  background-color: #08fe00;
 }
 
-button#removeButton.btn.btn-link:hover{
+button#removeButton.btn.btn-link:hover {
   transform: scale(1.06);
-  cursor:pointer;
+  cursor: pointer;
   box-shadow: 0 0 5px #fec500, 0 0 10px #fec500, 0 0 15px #fec500;
 }
 .srch_wrpr {
@@ -511,6 +519,6 @@ input.checkbox:checked ~ .srch_sb_cnt .srch_btn:after {
   transition-delay: 0.5s;
   color: white;
 }
-.l-box:hover{
+.l-box:hover {
   transform: scale(1.06);
 }
